# langchain-agent-setup

./: .gitignore  BACKLOG.md  model_config.yaml  package-lock.json  pyproject.toml
.github/instructions/: memory.instructions.md
config/: config.yaml
prompts/meetings/: refinement.md
prompts/misc/: maintenance.md  memory.instructions.md
src/: main.py
src/chromadb/: memory.py
src/config/: __init__.py  logging.py
src/tools/: __init__.py  mcp_tools.py  memory_manager.py
