[project]
name = "redo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "autogen-agentchat>=0.6.1",
    "autogen-core>=0.6.1",
    "autogen-ext[ollama]>=0.6.1",
    "chromadb>=1.0.13",
]
