[project]
name = "redo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "duckduckgo-search>=8.0.4",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain[ollama]>=0.3.25",
    "langgraph>=0.4.8",
    "lxml>=5.4.0",
    "mcp-server-time>=0.6.2",
    "mem0ai>=0.1.112",
    "mlflow>=3.1.0",
    "nest-asyncio>=1.6.0",
    "playwright>=1.52.0",
]
